--- a/memorable-water-bottle/src/components/Cart/Cart.css
+++ b/memorable-water-bottle/src/components/Cart/Cart.css
@@ -1,3 +1,8 @@
+.cart-container{
+    border: 2px solid green;
+    margin-bottom: 10px;
+    border-radius: 20px;
+}
 .cart-container img{
  width: 200px;
  margin-right:  20px;
